--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,6 @@
 !/log/.keep
 !/tmp/.keep
 
-# Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/
-!/tmp/pids/.keep
-
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
@@ -34,3 +29,11 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+/.generators
+/.rakeTasks
+/.idea/
+
+/config/credentials/staging.key
+/.npmrc
+
+/config/credentials/production.key
