--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "services",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@babel/preset-react": "^7.14.5",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "apollo-boost": "^0.4.9",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "eslint": "^6.5.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "graphql": "^15.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
