--- a/package.json
+++ b/package.json
@@ -2,27 +2,43 @@
   "name": "services",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.4.16",
+    "@apollo/client": "^3.4.17",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.16.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0",
-    "apollo-boost": "^0.4.9",
+    "@rails/webpacker": "^5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "eslint": "^6.5.0",
+    "esbuild": "^0.13.14",
+    "esbuild-loader": "^2.16.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "graphql": "^15.6.1",
+    "pnp-webpack-plugin": "^1.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "turbolinks": "^5.2.0"
+    "react-hot-loader": "^4.13.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
+    "ts-loader": "^9.2.6",
+    "turbolinks": "^5.2.0",
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.3.1"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "webpack-dev-server": "^3"
   }
 }
