--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "@apollo/client": "^3.4.17",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.16.0",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -19,11 +22,13 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "graphql": "^15.6.1",
+    "lodash": "^4.17.21",
     "pnp-webpack-plugin": "^1.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-router-dom": "^6.0.2",
     "speed-measure-webpack-plugin": "^1.5.0",
     "ts-loader": "^9.2.6",
     "turbolinks": "^5.2.0",
